forque font letter spacing fix for certain elements

--- a/client/css/app.styl
+++ b/client/css/app.styl
@@ -279,6 +279,7 @@ hr
     left 50%
     transform translate(-51%, -50%)
     height 2em
+    letter-spacing 0
 
 // App Specific structural elements.
 
@@ -439,7 +440,8 @@ img.loader
       .comment
         font-family Constantia
         font-size .75em
-        height 1em
+        // height 1em
+        letter-spacing 0
     &.comment
       @extends .rounded
       @extends .shadow
